--- a/project/frontend/public/index.html
+++ b/project/frontend/public/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="sec/assets/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="src/assets/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.0/css/all.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=86a89344314a38af4882760b5c260ce0&libraries=services"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
